# cookiecutter-python-project

./: README.rst  cookiecutter.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  .pylintrc  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.py
{{cookiecutter.package_name}}/.github/workflows/: ci.yml
{{cookiecutter.package_name}}/docs/source/: conf.py
{{cookiecutter.package_name}}/examples/: quickstart.py
{{cookiecutter.package_name}}/licenses/: BSD-3-CLAUSE  EXPAT  config.json
{{cookiecutter.package_name}}/scripts/: cleanup_docs.py  generate_help.ps1
{{cookiecutter.package_name}}/tests/: test-dist.bash  test-dist.ps1  test_examples.py  test_version.py
