[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.package_name}}"
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = []
authors = [
  {
    name = "{{cookiecutter.package_name}}",
    email = "{{cookiecutter.email}}",
  },
]
keywords=[
  "{{cookiecutter.package_name}}"
]
description = "{{cookiecutter.package_short_description}}"
readme = "README.rst"
license = "{{cookiecutter.license}}"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "black",
  "coverage",
  "isort",
  "mypy",
  "pylint",
  "sphinx",
  "twine",
  "wheel",
]

[project.urls]
Documentation = "http://{{cookiecutter.package_name}}.readthedocs.io"
"Source code" = "https://github.com/{{cookiecutter.github_user_name}}/{{cookiecutter.github_repo_name}}"

[tool.hatch.version]
path = "src/{{cookiecutter.package_name}}/__about__.py"

[tool.black]
line-length = 79

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = skip
no_implicit_optional = true
show_column_numbers = true
warn_no_return = true
